testing/Travis/testcases/prototype/shouldFail/ParserOrTypecheckFailures/ComparisonTest2.adl
CONTEXT CompareBooleans IN DUTCH

-- This test forces a compare on atoms with TTYPE BOOLEAN. That should not be allowed.

CONCEPT Boolean ""
REPRESENT Boolean TYPE BOOLEAN

POPULATION Boolean CONTAINS [ TRUE, FALSE ]

RELATION toTrue[A*Boolean]
POPULATION toTrue CONTAINS[
    ("Foo", TRUE)
]
RELATION toFalse[A*Boolean]
POPULATION toFalse CONTAINS[
    ("Foo", FALSE)
]

RULE compareBooleans : "Foo" |- toTrue;>;toFalse~



ENDCONTEXT